force-app/main/default/objects/ERA_Line_Item__c/ERA_Line_Item__c.object-meta.xml
<CustomObject>
    <description>This object is used to track the line level details of each Child ERA record.</description>
    <label>ERA Procedure Line Item</label>
    <nameField>
        <displayFormat>ELI-{0000}</displayFormat>
        <label>ERA Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERA Procedure Line Item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>