force-app/main/default/objects/ERA_Line_Item__c/fields/Adjustment_Amount_2__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Amount_2__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Denote the amount adjustment for a healthcare claim.</description>
    <label>Adjustment Amount 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>