force-app/main/default/objects/ERA_Line_Item__c/fields/Adjustment_Code_1__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Code_1__c</fullName>
    <description>Formula to concatenate adjustment group code and adjustment reason code.</description>
    <formula>Group_1__c  +&apos; &apos; + &apos;-&apos; + &apos; &apos; +  Code_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjustment Code 1</label>
    <type>Text</type>
</CustomField>