force-app/main/default/objects/ERA_Line_Item__c/fields/Adjustment_Code_2__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Code_2__c</fullName>
    <description>Formula to concatenate the adjustment group code and the adjustment reason code.</description>
    <formula>Group_2__c   +&apos; &apos; + &apos;-&apos; + &apos; &apos; +  Code_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjustment Code 2</label>
    <type>Text</type>
</CustomField>