force-app/main/default/objects/ERA_Line_Item__c/fields/Adjustment_Code_3__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Code_3__c</fullName>
    <description>Formula to concatenate the adjustment group code and the adjustment reason code.</description>
    <formula>Group_3__c  +&apos; &apos; + &apos;-&apos; + &apos; &apos; +  Code_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjustment Code 3</label>
    <type>Text</type>
</CustomField>