force-app/main/default/objects/ERA_Line_Item__c/fields/Adjustment_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Group_Code__c</fullName>
    <label>Adjustment Group Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CO</fullName>
                <label>CO - Contractual Obligations</label>
            </value>
            <value>
                <fullName>PI</fullName>
                <label>PI - Payer Initiated Reductions</label>
            </value>
            <value>
                <fullName>PR</fullName>
                <label>PR - Patient Responsibility</label>
            </value>
            <value>
                <fullName>OA</fullName>
                <label>OA - Other Adjustments</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>