force-app/main/default/objects/ERA_Line_Item__c/fields/Adjustment_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Reason_Code__c</fullName>
    <label>Adjustment Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Adjustment_Reason_Code</valueSetName>
    </valueSet>
</CustomField>