force-app/main/default/objects/ERA_Line_Item__c/fields/Adjustment_Remark_Codes__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Remark_Codes__c</fullName>
    <description>Remark codes are used to provide additional explanation for an adjustment already described by a Claim Adjustment Reason Code (CARC) or to convey information about remittance processing.</description>
    <label>Remark Codes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M1</fullName>
            </value>
            <value>
                <fullName>M2</fullName>
            </value>
            <value>
                <fullName>M3</fullName>
            </value>
            <value>
                <fullName>M4</fullName>
            </value>
            <value>
                <fullName>M5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>