force-app/main/default/objects/ERA_Line_Item__c/fields/Batch_id__c.field-meta.xml
<CustomField>
    <fullName>Batch_id__c</fullName>
    <label>Batch id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>