force-app/main/default/objects/ERA_Line_Item__c/fields/Bill_Npi__c.field-meta.xml
<CustomField>
    <fullName>Bill_Npi__c</fullName>
    <description>National Provider Identifier associated with the billing healthcare provider.</description>
    <label>Bill Npi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>