force-app/main/default/objects/ERA_Line_Item__c/fields/Bill_Taxid__c.field-meta.xml
<CustomField>
    <fullName>Bill_Taxid__c</fullName>
    <description>Tax identification number linked to the billing healthcare provider.</description>
    <label>Bill Taxid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>