force-app/main/default/objects/ERA_Line_Item__c/fields/Charge__c.field-meta.xml
<CustomField>
    <fullName>Charge__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Represents the original amount billed for a specific healthcare service or procedure.</description>
    <label>Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>