force-app/main/default/objects/ERA_Line_Item__c/fields/chg_Id__c.field-meta.xml
<CustomField>
    <fullName>chg_Id__c</fullName>
    <label>Charge Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>