force-app/main/default/objects/ERA_Line_Item__c/fields/Claim_Id__c.field-meta.xml
<CustomField>
    <fullName>Claim_Id__c</fullName>
    <label>Claim Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>