force-app/main/default/objects/ERA_Line_Item__c/fields/Claim_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Claim_Line_Items__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate the Claim line item with the ERA line item.</description>
    <label>Claim Line Items</label>
    <referenceTo>Claim_Line_Items__c</referenceTo>
    <relationshipLabel>ERA Line Item</relationshipLabel>
    <relationshipName>ERA_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>