force-app/main/default/objects/ERA_Line_Item__c/fields/Claim_Md_Id__c.field-meta.xml
<CustomField>
    <fullName>Claim_Md_Id__c</fullName>
    <label>Claim Md Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>