force-app/main/default/objects/ERA_Line_Item__c/fields/Code_2__c.field-meta.xml
<CustomField>
    <fullName>Code_2__c</fullName>
    <description>Represent specific code indicating the nature of adjustment made to the healthcare claim.</description>
    <label>Code 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>