force-app/main/default/objects/ERA_Line_Item__c/fields/Code_3__c.field-meta.xml
<CustomField>
    <fullName>Code_3__c</fullName>
    <description>Represent specific code indicating the nature of adjustment made to the healthcare claim.</description>
    <label>Code 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>