force-app/main/default/objects/ERA_Line_Item__c/fields/Copay__c.field-meta.xml
<CustomField>
    <fullName>Copay__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Denote the out-of-pocket amount a patient must pay for a specific healthcare service.</description>
    <label>Copay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>