force-app/main/default/objects/ERA_Line_Item__c/fields/Count_of_total_adjustments_used__c.field-meta.xml
<CustomField>
    <fullName>Count_of_total_adjustments_used__c</fullName>
    <description>Numerical count representing the total adjustments applied to the healthcare claim.</description>
    <label>Count of total adjustments used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>