force-app/main/default/objects/ERA_Line_Item__c/fields/Deductible__c.field-meta.xml
<CustomField>
    <fullName>Deductible__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Represent the amount a patient must pay out of pocket before insurance coverage begins.</description>
    <label>Deductible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>