force-app/main/default/objects/ERA_Line_Item__c/fields/ElixirSuite_Adjustment_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>ElixirSuite_Adjustment_Group_Code__c</fullName>
    <label>Adjustment Group Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Adjustment_Group_Code</valueSetName>
    </valueSet>
</CustomField>