force-app/main/default/objects/ERA_Line_Item__c/fields/EOB__c.field-meta.xml
<CustomField>
    <fullName>EOB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate the ERA with the ERA line item.</description>
    <label>ERA</label>
    <referenceTo>EOB__c</referenceTo>
    <relationshipLabel>ERA Line Item</relationshipLabel>
    <relationshipName>ERA_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>