force-app/main/default/objects/ERA_Line_Item__c/fields/ERAInformational_Remark_Codes__c.field-meta.xml
<CustomField>
    <fullName>ERAInformational_Remark_Codes__c</fullName>
    <description>Represents different informational remark codes specific to the procedure.</description>
    <label>Informational Remark Codes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M4-Alert</fullName>
            </value>
            <value>
                <fullName>M6-Alert</fullName>
            </value>
            <value>
                <fullName>M9-Alert</fullName>
            </value>
            <value>
                <fullName>M16-Alert</fullName>
            </value>
            <value>
                <fullName>M17</fullName>
            </value>
            <value>
                <fullName>M27</fullName>
            </value>
            <value>
                <fullName>M32</fullName>
            </value>
            <value>
                <fullName>M38</fullName>
            </value>
            <value>
                <fullName>M39</fullName>
            </value>
            <value>
                <fullName>M70</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>