force-app/main/default/objects/ERA_Line_Item__c/fields/ERASupplemental_Remark_Codes1__c.field-meta.xml
<CustomField>
    <fullName>ERASupplemental_Remark_Codes1__c</fullName>
    <description>Additional code providing supplementary information about adjustment.</description>
    <label>Supplemental Remark Codes1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M1-X</fullName>
            </value>
            <value>
                <fullName>M2</fullName>
            </value>
            <value>
                <fullName>M3</fullName>
            </value>
            <value>
                <fullName>M5</fullName>
            </value>
            <value>
                <fullName>M7</fullName>
            </value>
            <value>
                <fullName>M8</fullName>
            </value>
            <value>
                <fullName>M10</fullName>
            </value>
            <value>
                <fullName>M11</fullName>
            </value>
            <value>
                <fullName>M12</fullName>
            </value>
            <value>
                <fullName>M13</fullName>
            </value>
            <value>
                <fullName>M14</fullName>
            </value>
            <value>
                <fullName>M15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>