force-app/main/default/objects/ERA_Line_Item__c/fields/Fdos__c.field-meta.xml
<CustomField>
    <fullName>Fdos__c</fullName>
    <label>Fdos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>