force-app/main/default/objects/ERA_Line_Item__c/fields/File_Id__c.field-meta.xml
<CustomField>
    <fullName>File_Id__c</fullName>
    <label>File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>