force-app/main/default/objects/ERA_Line_Item__c/fields/From_Dos__c.field-meta.xml
<CustomField>
    <fullName>From_Dos__c</fullName>
    <label>From_Dos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>