force-app/main/default/objects/ERA_Line_Item__c/fields/Group_1__c.field-meta.xml
<CustomField>
    <fullName>Group_1__c</fullName>
    <description>Denote the group code specifying the adjustment group to which an adjustment belongs.</description>
    <label>Group 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>