force-app/main/default/objects/ERA_Line_Item__c/fields/Group_2__c.field-meta.xml
<CustomField>
    <fullName>Group_2__c</fullName>
    <description>Denote the group code specifying the adjustment group to which an adjustment belongs.</description>
    <label>Group 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>