force-app/main/default/objects/ERA_Line_Item__c/fields/Ins_Number__c.field-meta.xml
<CustomField>
    <fullName>Ins_Number__c</fullName>
    <description>Represents insurance policy number associated with the patient&apos;s coverage.</description>
    <label>Ins Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>