force-app/main/default/objects/ERA_Line_Item__c/fields/Is_Posted__c.field-meta.xml
<CustomField>
    <fullName>Is_Posted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Status indicating whether payment and adjustments have been posted.</description>
    <label>Posted</label>
    <type>Checkbox</type>
</CustomField>