force-app/main/default/objects/ERA_Line_Item__c/fields/Other_Insurance_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Other_Insurance_Responsibility__c</fullName>
    <formula>Total_Allowed_Amount__c - (Paid__c + Patient_Responsibility__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Insurance Responsibility</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>