force-app/main/default/objects/ERA_Line_Item__c/fields/Paid__c.field-meta.xml
<CustomField>
    <fullName>Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total amount paid by the insurance company for the healthcare claim.</description>
    <label>Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>