force-app/main/default/objects/ERA_Line_Item__c/fields/Patient_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Patient_Responsibility__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Represents portion of the healthcare claim amount the patient is responsible to pay.</description>
    <label>Patient Responsibility</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>