force-app/main/default/objects/ERA_Line_Item__c/fields/Pcn__c.field-meta.xml
<CustomField>
    <fullName>Pcn__c</fullName>
    <description>Payer Control Number, a unique identifier assigned by the insurance payer.</description>
    <label>Pcn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>