force-app/main/default/objects/ERA_Line_Item__c/fields/Proc_code__c.field-meta.xml
<CustomField>
    <fullName>Proc_code__c</fullName>
    <label>Proc code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>