force-app/main/default/objects/ERA_Line_Item__c/fields/Provider_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Provider_Adjustment__c</fullName>
    <description>Denote the adjustment made by the healthcare provider to the billed amount.</description>
    <formula>Charge__c - Total_Allowed_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>