force-app/main/default/objects/ERA_Line_Item__c/fields/Remark_Codes__c.field-meta.xml
<CustomField>
    <fullName>Remark_Codes__c</fullName>
    <description>This field is used to have remark codes send by the claim MD.</description>
    <label>Remark Codes</label>
    <type>TextArea</type>
</CustomField>