force-app/main/default/objects/ERA_Line_Item__c/fields/sender_Icn__c.field-meta.xml
<CustomField>
    <fullName>sender_Icn__c</fullName>
    <label>sender Icn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>