force-app/main/default/objects/ERA_Line_Item__c/fields/sender_Id__c.field-meta.xml
<CustomField>
    <fullName>sender_Id__c</fullName>
    <label>Sender Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>