force-app/main/default/objects/ERA_Line_Item__c/fields/Total_Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Adjustment_Amount__c</fullName>
    <description>Cumulative amount of all adjustments made to the healthcare claim.</description>
    <formula>Charge__c - Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>