force-app/main/default/objects/ERA_Line_Item__c/fields/Total_Allowed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Allowed_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total amount approved by the insurance payer for payment.</description>
    <label>Total Allowed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>