force-app/main/default/objects/ERA_Line_Item__c/fields/Total_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_Charge__c</fullName>
    <description>Sum of all charges for services or procedures in the healthcare claim.</description>
    <label>Total Charge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>