force-app/main/default/objects/ERA_Line_Item__c/fields/Total_Patient_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Total_Patient_Responsibility__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Overall amount for which the patient is responsible after insurance payments and adjustments.</description>
    <label>Total Patient Responsibility</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>