force-app/main/default/objects/ERA_Line_Item__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <description>Quantity of units associated with a specific healthcare service or procedure listed in the claim.</description>
    <label>Units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>